--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.1
-	yarn_mappings=1.15.1+build.6
-	loader_version=0.7.2+build.175
+	minecraft_version=1.15.2
+	yarn_mappings=1.15.2+build.14
+	loader_version=0.7.8+build.184
 
 # Mod Properties
 	mod_version = 1.1.6
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = MpcsBackpacks
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version=0.4.25+build.282-1.15
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	fabric_version=0.4.32+build.292-1.15
